@@ -20,6 +20,8 @@ via mahadev)
 
    ZOOKEEPER-228. fix apache header missing in DBTest. (mahadev)
 
+   ZOOKEEPER-218. fix the error in the barrier example code. (pat via mahadev)
+
 Release 3.0.0 - 2008-10-21
 
 Non-backward compatible changes:
